--- a/fluttermedia/pubspec.yaml
+++ b/fluttermedia/pubspec.yaml
@@ -28,10 +28,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.4.1
   firebase_core: ^1.19.1
+  firebase_storage: ^10.3.1
   flutter:
     sdk: flutter
+  fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
