--- a/fluttermedia/pubspec.yaml
+++ b/fluttermedia/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  agora_rtc_engine: ^5.2.0
   cloud_firestore: ^3.2.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.4.1
