--- a/fluttermedia/pubspec.yaml
+++ b/fluttermedia/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^10.3.1
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.2.4
   fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
   image_picker: ^0.8.5+3
